--- a/frontend/register/register.css
+++ b/frontend/register/register.css
@@ -10,7 +10,7 @@ body {
   position: relative;
 }
 
-.loginMain {
+.registerMain {
   width: 50%;
   height: 80%;
   background-color: #240046;
@@ -22,7 +22,7 @@ body {
   box-shadow: 0px 0px 7px #440510, 0px 0px 30px #440510;
 }
 
-.loginForm {
+.registerForm {
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -30,12 +30,12 @@ body {
   align-items: center;
 }
 
-.loginForm div {
+.registerForm div {
   margin-top: 2em;
 }
 
-.loginForm input[type="text"],
-.loginForm input[type="password"] {
+.registerForm input[type="text"],
+.registerForm input[type="password"] {
   /* padding: 1em 4em 1em 4em; */
   padding: 3px;
   width: 300px;
@@ -44,7 +44,7 @@ body {
   border: none;
 }
 
-.loginForm label {
+.registerForm label {
   text-align: center;
   text-transform: capitalize;
   color: #c32f27;
