--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -1,12 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
   height: 100vh;
-  background-color: #47126b;
+  background: linear-gradient(to bottom, #a42ef3, #2a0841);
   position: relative;
 }
 
@@ -61,21 +63,38 @@ body {
 }
 
 .loginBtn {
-  padding: 0.8em 2.5em;
-  background-color: #d90429;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  text-transform: uppercase;
-  color: #fff;
-  letter-spacing: 2px;
+  width: 200px;
   font-size: medium;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+  margin: 20px;
+  height: 55px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  letter-spacing: 2px;
+
+  border-radius: 10px;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+
+  background-image: linear-gradient(
+    to right,
+    #daa30e,
+    #ec0808,
+    #f0487a,
+    #ad190e
+  );
+  box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
 }
 
 .loginBtn:hover {
-  background-color: #fff;
-  color: #d90429;
-  border-color: #d90429;
+  background-position: 100% 0;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .loginHeader {
@@ -102,4 +121,9 @@ body {
 
 .registerNow span {
   margin-left: 10px;
+}
+
+.registerNow a:hover {
+  text-decoration: none;
+  color: #f10606;
 }
