--- a/frontend/styles/register.css
+++ b/frontend/styles/register.css
@@ -14,7 +14,7 @@ body {
 
 .registerMain {
   width: 50%;
-  height: 80%;
+  height: 90%;
   background-color: #240046;
   position: absolute;
   top: 50%;
@@ -74,12 +74,18 @@ body {
 
 .header {
   position: absolute;
+  width: 100%;
   top: 5%;
   left: 50%;
   transform: translateX(-50%);
   color: #be1d15;
+  text-align: center;
   text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #8a110a,
     0 0 82px #8a110a, 0 0 92px #8a110a, 0 0 102px #8a110a, 0 0 151px #8a110a;
+}
+
+.regHeader {
+  font-size: 3.5em;
 }
 
 .sendBtn {
