--- a/frontend/styles/lobby.css
+++ b/frontend/styles/lobby.css
@@ -147,3 +147,16 @@ body {
   box-shadow: 0 0 2px #10021a, 0 0 7px #520883, 0 0 18px #2a0344;
   padding: 0.8%;
 }
+
+.sticky {
+  width: 100%;
+  position: sticky;
+  top: 0;
+  background-color: #a42ef3;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
