--- a/node_frontend/styles/game.css
+++ b/node_frontend/styles/game.css
@@ -65,10 +65,6 @@ body {
   transform: scale(1.04);
 }
 
-.bright {
-  opacity: 1;
-}
-
 .endTurnBtn {
   width: 200px;
   font-size: 16px;
@@ -171,13 +167,19 @@ body {
   width: 200px;
   padding: 20px 10px;
   border-radius: 10px;
+  opacity: 0.6;
+  position: relative;
 }
 
 .team1Info {
-  background-color: #ad0718;
+  background-color: #9d0208;
 }
 
-.operatives,
+.team2Info {
+  background-color: #03045e;
+  text-align: right;
+}
+
 .spy {
   color: #fff;
   font-size: medium;
@@ -186,11 +188,134 @@ body {
 }
 
 .spymaster1,
-.spymaster2,
-.operatives1,
-.operatives2 {
+.operatives1 {
   color: #fff;
   font-size: large;
   font-weight: 400;
   margin-left: 20px;
+}
+
+.operatives1 {
+  font-weight: 350;
+}
+
+.operatives2 {
+  color: #fff;
+  font-size: large;
+  font-weight: 350;
+  margin-right: 20px;
+}
+
+.spymaster2 {
+  color: #fff;
+  font-size: large;
+  font-weight: 400;
+  margin-right: 20px;
+}
+
+.bright {
+  opacity: 1;
+}
+
+.brightDiv {
+  opacity: 1;
+  box-shadow: 0 0 5px #fff, 0 0 12px #fff, 0 0 20px #fff;
+}
+
+.lefToGuessRed {
+  font-size: 48px;
+  font-weight: 600;
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  text-shadow: 0 0 5px #fff, 0 0 14px #fff, 0 0 20px #fff;
+}
+
+.lefToGuessBlue {
+  font-size: 48px;
+  font-weight: 600;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  text-shadow: 0 0 5px #fff, 0 0 14px #fff, 0 0 20px #fff;
+}
+
+.operativeLabel {
+  color: #fff;
+  font-size: medium;
+  font-weight: 300;
+  opacity: 0.8;
+}
+
+.spyBtn,
+.opBtn {
+  width: 150px;
+  font-size: 12px;
+  font-weight: 600;
+  color: #fff;
+  letter-spacing: 2px;
+  text-transform: capitalize;
+  cursor: pointer;
+  margin-top: 25px;
+  height: 35px;
+  text-align: center;
+  border: none;
+  background-size: 300% 100%;
+  padding: 0px 20px;
+  text-align: center;
+
+  border-radius: 15px;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.spyBtn {
+  background-image: linear-gradient(
+    to right,
+    #29323c,
+    #485563,
+    #2b5876,
+    #4e4376
+  );
+  box-shadow: 0 4px 15px 0 rgba(45, 54, 65, 0.75);
+}
+
+.opBtn {
+  background-image: linear-gradient(
+    to right,
+    #25aae1,
+    #40e495,
+    #30dd8a,
+    #2bb673
+  );
+  box-shadow: 0 4px 15px 0 rgba(49, 196, 190, 0.75);
+}
+
+.spyBtn:hover,
+.opBtn:hover {
+  background-position: 100% 0;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.buttonDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.none {
+  display: none;
+}
+
+.winner {
+  font-size: 34px;
+  font-weight: 800;
+  color: #80b918;
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  text-shadow: 0 0 4px #fff, 0 0 12px #fff;
 }
