--- a/node_frontend/styles/login.css
+++ b/node_frontend/styles/login.css
@@ -127,3 +127,13 @@ body {
   text-decoration: none;
   color: #f10606;
 }
+
+#error {
+  margin-top: 1em;
+  color: #fa1201;
+}
+
+::placeholder {
+  color: red;
+  opacity: 1;
+}
