--- a/node_frontend/styles/game.css
+++ b/node_frontend/styles/game.css
@@ -28,12 +28,34 @@ body {
 }
 
 .header {
+  min-height: 30px;
   text-align: center;
   margin-bottom: 20px;
   margin-top: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.timer {
+  font-size: 24px;
+  font-weight: 600;
+  letter-spacing: 2px;
+  text-shadow: 0 0 5px #fff, 0 0 12px #fff, 0 0 20px #fff;
+}
+
+.pulse {
+  color: #ff0000;
+  animation: pulse-animation 2s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+  }
 }
 
 .end {
