--- a/frontend/styles/game.css
+++ b/frontend/styles/game.css
@@ -17,19 +17,28 @@ body {
   width: 100%;
   padding: 15px 0px;
   position: absolute;
-  top: 2%;
+  top: 50%;
+  transform: translateY(-50%);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .board {
-  width: 50%;
+  width: 56%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.center {
   text-align: center;
+  width: 100%;
 }
 
 .team {
-  width: 20%;
+  width: 17%;
 }
 
 .row {
