--- a/frontend/styles/game.css
+++ b/frontend/styles/game.css
@@ -13,19 +13,15 @@ body {
 }
 
 .main {
-  height: auto;
+  height: 100vh;
   width: 100%;
-  padding: 15px 0px;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .board {
-  width: 56%;
+  width: 59%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -38,7 +34,21 @@ body {
 }
 
 .team {
-  width: 17%;
+  width: 15.5%;
+  height: 100%;
+  position: relative;
+}
+
+.team1Info {
+  position: absolute;
+  top: 3%;
+  left: 0;
+}
+
+.team2Info {
+  position: absolute;
+  top: 3%;
+  right: 0;
 }
 
 .row {
@@ -84,7 +94,7 @@ body {
 
 .card {
   width: 16%;
-  height: 80px;
+  height: 75px;
   border-radius: 5px;
   margin-right: 3%;
   background-color: #f3c3bb;
