--- a/frontend/styles/game.css
+++ b/frontend/styles/game.css
@@ -21,7 +21,7 @@ body {
 }
 
 .board {
-  width: 59%;
+  width: 65%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -106,6 +106,7 @@ body {
   font-size: 16px;
   font-weight: 800;
   opacity: 0.6;
+  overflow-wrap: break-word;
 }
 
 .card:last-child {
